Restore book labels and update title tags

--- a/src/epub/text/book-1.xhtml
+++ b/src/epub/text/book-1.xhtml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" epub:prefix="z3998: http://www.daisy.org/z3998/2012/vocab/structure/, se: https://standardebooks.org/vocab/1.0" xml:lang="en-US">
 	<head>
-		<title>Book 1</title>
+		<title>Book I</title>
 		<link href="../css/core.css" rel="stylesheet" type="text/css"/>
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:non-fiction">
 		<section id="book-1" epub:type="chapter">
-			<h2 epub:type="ordinal z3998:roman">I</h2>
+			<h2>
+				<span epub:type="label">Book</span>
+				<span epub:type="ordinal z3998:roman">I</span>
+			</h2>
 			<section id="part-1-1">
 				<h3 epub:type="title">Introduction</h3>
 				<p>Some say that the study of philosophy originated with the barbarians. In that among the Persians there existed the Magi,<a href="endnotes.xhtml#note-1" id="noteref-1" epub:type="noteref">1</a> and among the Babylonians or Assyrians the Chaldaei,<a href="endnotes.xhtml#note-2" id="noteref-2" epub:type="noteref">2</a> among the Indians the Gymnosophistae,<a href="endnotes.xhtml#note-3" id="noteref-3" epub:type="noteref">3</a> and among the Celts and Gauls men who were called Druids<a href="endnotes.xhtml#note-4" id="noteref-4" epub:type="noteref">4</a> and Semnothei, as Aristotle relates in his book on Magic, and Sotion in the twenty-third book of his <i epub:type="se:name.publication.book">Succession of Philosophers</i>. Besides those men there were the Phoenician Ochus, the Thracian Zamolxis,<a href="endnotes.xhtml#note-5" id="noteref-5" epub:type="noteref">5</a> and the Libyan Atlas. For the Egyptians say that Vulcan was the son of Nilus, and that he was the author of philosophy, in which those who were especially eminent were called his priests and prophets.</p>
