--- a/src/epub/text/book-10.xhtml
+++ b/src/epub/text/book-10.xhtml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" epub:prefix="z3998: http://www.daisy.org/z3998/2012/vocab/structure/, se: https://standardebooks.org/vocab/1.0" xml:lang="en-US">
 	<head>
-		<title>Book 10</title>
+		<title>Book X</title>
 		<link href="../css/core.css" rel="stylesheet" type="text/css"/>
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:non-fiction">
 		<section id="book-10" epub:type="chapter">
-			<h2 epub:type="ordinal z3998:roman">X</h2>
+			<h2>
+				<span epub:type="label">Book</span>
+				<span epub:type="ordinal z3998:roman">X</span>
+			</h2>
 			<section id="part-10-1">
 				<h3 epub:type="title">Epicurus</h3>
 				<p>Epicurus was an Athenian, and the son of Neocles and Chaerestrate, of the burgh of Gargettus, and of the family of the Philaidae, as Metrodorus tells us in his treatise on Nobility of Birth. Some writers, and among them Heraclides in his <i epub:type="se:name.publication.book">Abridgment of Sotion</i>, say that as the Athenians had colonised Samos, he was brought up there, and came to Athens in his eighteenth year, while Xenocrates was president of the Academy, and Aristotle at Chalcis. But after the death of Alexander the Macedonian, when the Athenians were driven out of Samos by Perdiccas, Epicurus went to Colophon to his father.</p>
