--- a/src/epub/text/book-3.xhtml
+++ b/src/epub/text/book-3.xhtml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" epub:prefix="z3998: http://www.daisy.org/z3998/2012/vocab/structure/, se: https://standardebooks.org/vocab/1.0" xml:lang="en-US">
 	<head>
-		<title>Book 3</title>
+		<title>Book III</title>
 		<link href="../css/core.css" rel="stylesheet" type="text/css"/>
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:non-fiction">
 		<section id="book-3" epub:type="chapter">
-			<h2 epub:type="ordinal z3998:roman">III</h2>
+			<h2>
+				<span epub:type="label">Book</span>
+				<span epub:type="ordinal z3998:roman">III</span>
+			</h2>
 			<section id="part-3-1">
 				<h3 epub:type="title">Plato</h3>
 				<p>Plato was the son of Ariston and Perictione or Potone, and a citizen of Athens; and his mother traced her family back to Solon, for Solon had a brother named Dropidas, who had a son named Critias, who was the father of Callaeschrus, who was the father of that Critias who was one of the thirty tyrants, and also of Glaucon, who was the father of Charmides and Perictione. And she became the mother of Plato by her husband Ariston, Plato being the sixth in descent from Solon. And Solon traced his pedigree up to Neleus and Neptune. They say too that on the father’s side, he was descended from Codrus, the son of Melanthus, and they too are said by Thrasylus to derive their origin from Neptune. And Speusippus, in his book which is entitled the <i epub:type="se:name.publication.book">Funeral Banquet of Plato</i>, and Clearchus in his <i epub:type="se:name.publication.book">Panegyric on Plato</i>, and Anaxilides in the second book of his <i epub:type="se:name.publication.book">History of Philosophers</i>, say that the report at Athens was that Perictione was very beautiful, and that Ariston endeavored to violate her and did not succeed; and that he, after he had desisted from his violence saw a vision of Apollo in a dream, in consequence of which he abstained from approaching his wife till after her confinement.</p>
