--- a/src/epub/text/book-5.xhtml
+++ b/src/epub/text/book-5.xhtml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" epub:prefix="z3998: http://www.daisy.org/z3998/2012/vocab/structure/, se: https://standardebooks.org/vocab/1.0" xml:lang="en-US">
 	<head>
-		<title>Book 5</title>
+		<title>Book V</title>
 		<link href="../css/core.css" rel="stylesheet" type="text/css"/>
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:non-fiction">
 		<section id="book-5" epub:type="chapter">
-			<h2 epub:type="ordinal z3998:roman">V</h2>
+			<h2>
+				<span epub:type="label">Book</span>
+				<span epub:type="ordinal z3998:roman">V</span>
+			</h2>
 			<section id="part-5-1">
 				<h3 epub:type="title">Aristotle</h3>
 				<p>Aristotle was the son of Nicomachus and Phaestias, a citizen of Stagira; and Nicomachus was descended from Nicomachus, the son of Machaon, the son of Aesculapius, as Hermippus tells us in his treatise on Aristotle; and he lived with Amyntas, the king of the Macedonians, as both a physician and a friend.</p>
