--- a/src/epub/text/book-6.xhtml
+++ b/src/epub/text/book-6.xhtml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" epub:prefix="z3998: http://www.daisy.org/z3998/2012/vocab/structure/, se: https://standardebooks.org/vocab/1.0" xml:lang="en-US">
 	<head>
-		<title>Book 6</title>
+		<title>Book VI</title>
 		<link href="../css/core.css" rel="stylesheet" type="text/css"/>
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:non-fiction">
 		<section id="book-6" epub:type="chapter">
-			<h2 epub:type="ordinal z3998:roman">VI</h2>
+			<h2>
+				<span epub:type="label">Book</span>
+				<span epub:type="ordinal z3998:roman">VI</span>
+			</h2>
 			<section id="part-6-1">
 				<h3 epub:type="title">Antisthenes</h3>
 				<p>Antisthenes was an Athenian, the son of Antisthenes. And he was said not to be a legitimate Athenian, in reference to which he said to someone who was reproaching him with the circumstance: “The mother of the Gods too is a Phrygian,” for he was thought to have had a Thracian mother. On which account, as he had borne himself bravely in the battle of Tanagra, he gave occasion to Socrates to say that the son of two Athenians could not have been so brave. And he himself, when disparaging the Athenians who gave themselves great airs as having been born out of the earth itself, said that they were not more noble as far as that went than snails and locusts.</p>
