--- a/src/epub/text/book-8.xhtml
+++ b/src/epub/text/book-8.xhtml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" epub:prefix="z3998: http://www.daisy.org/z3998/2012/vocab/structure/, se: https://standardebooks.org/vocab/1.0" xml:lang="en-US">
 	<head>
-		<title>Book 8</title>
+		<title>Book VIII</title>
 		<link href="../css/core.css" rel="stylesheet" type="text/css"/>
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:non-fiction">
 		<section id="book-8" epub:type="chapter">
-			<h2 epub:type="ordinal z3998:roman">VIII</h2>
+			<h2>
+				<span epub:type="label">Book</span>
+				<span epub:type="ordinal z3998:roman">VIII</span>
+			</h2>
 			<section id="part-8-1">
 				<h3 epub:type="title">Pythagoras</h3>
 				<p>Since we have now gone through the Ionian philosophy, which was derived from Thales, and the lives of the several illustrious men who were the chief ornaments of that school; we will now proceed to treat of the Italian School, which was founded by Pythagoras, the son of Mnesarchus, a seal engraver, as he is recorded to have been by Hermippus; a native of Samos, or as Aristoxenus asserts, a Tyrrhenian, and a native of one of the islands which the Athenians occupied after they had driven out the Tyrrhenians. But some authors say that he was the son of Marmacus, the son of Hippasus, the son of Euthyphron, the son of Cleonymus, who was an exile from Phlias; and that Marmacus settled in Samos, and that from this circumstance Pythagoras was called a Samian. After that he migrated to Lesbos, having come to Pherecydes with letters of recommendation from Zoilus, his uncle. And having made three silver goblets, he carried them to Egypt as a present for each of the three priests. He had brothers, the eldest of whom was named Eunomus, the middle one Tyrrhenus, and a slave named Zamolxis, to whom the Getae sacrifice, believing him to be the same as Saturn, according to the account of Herodotus.<a href="endnotes.xhtml#note-107" id="noteref-107" epub:type="noteref">107</a></p>
