--- a/src/epub/text/book-9.xhtml
+++ b/src/epub/text/book-9.xhtml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" epub:prefix="z3998: http://www.daisy.org/z3998/2012/vocab/structure/, se: https://standardebooks.org/vocab/1.0" xml:lang="en-US">
 	<head>
-		<title>Book 9</title>
+		<title>Book IX</title>
 		<link href="../css/core.css" rel="stylesheet" type="text/css"/>
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:non-fiction">
 		<section id="book-9" epub:type="chapter">
-			<h2 epub:type="ordinal z3998:roman">IX</h2>
+			<h2>
+				<span epub:type="label">Book</span>
+				<span epub:type="ordinal z3998:roman">IX</span>
+			</h2>
 			<section id="part-9-1">
 				<h3 epub:type="title">Heraclitus</h3>
 				<p>Heraclitus was the son of Blyson, or as some say, of Heracion, and a citizen of Ephesus. He flourished about the sixty-ninth olympiad.</p>
