--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -20,7 +20,7 @@
 					<a href="text/halftitle.xhtml">The Lives and Opinions of Eminent Philosophers</a>
 					<ol>
 						<li>
-							<a href="text/book-1.xhtml" epub:type="z3998:roman">I</a>
+							<a href="text/book-1.xhtml">Book <span epub:type="z3998:roman">I</span></a>
 							<ol>
 								<li>
 									<a href="text/book-1.xhtml#part-1-1">Introduction</a>
@@ -61,7 +61,7 @@
 							</ol>
 						</li>
 						<li>
-							<a href="text/book-2.xhtml" epub:type="z3998:roman">II</a>
+							<a href="text/book-2.xhtml">Book <span epub:type="z3998:roman">II</span></a>
 							<ol>
 								<li>
 									<a href="text/book-2.xhtml#part-2-1">Anaximander</a>
@@ -117,7 +117,7 @@
 							</ol>
 						</li>
 						<li>
-							<a href="text/book-3.xhtml" epub:type="z3998:roman">III</a>
+							<a href="text/book-3.xhtml">Book <span epub:type="z3998:roman">III</span></a>
 							<ol>
 								<li>
 									<a href="text/book-3.xhtml#part-3-1">Plato</a>
@@ -125,7 +125,7 @@
 							</ol>
 						</li>
 						<li>
-							<a href="text/book-4.xhtml" epub:type="z3998:roman">IV</a>
+							<a href="text/book-4.xhtml">Book <span epub:type="z3998:roman">IV</span></a>
 							<ol>
 								<li>
 									<a href="text/book-4.xhtml#part-4-1">Speusippus</a>
@@ -160,7 +160,7 @@
 							</ol>
 						</li>
 						<li>
-							<a href="text/book-5.xhtml" epub:type="z3998:roman">V</a>
+							<a href="text/book-5.xhtml">Book <span epub:type="z3998:roman">V</span></a>
 							<ol>
 								<li>
 									<a href="text/book-5.xhtml#part-5-1">Aristotle</a>
@@ -183,7 +183,7 @@
 							</ol>
 						</li>
 						<li>
-							<a href="text/book-6.xhtml" epub:type="z3998:roman">VI</a>
+							<a href="text/book-6.xhtml">Book <span epub:type="z3998:roman">VI</span></a>
 							<ol>
 								<li>
 									<a href="text/book-6.xhtml#part-6-1">Antisthenes</a>
@@ -215,7 +215,7 @@
 							</ol>
 						</li>
 						<li>
-							<a href="text/book-7.xhtml" epub:type="z3998:roman">VII</a>
+							<a href="text/book-7.xhtml">Book <span epub:type="z3998:roman">VII</span></a>
 							<ol>
 								<li>
 									<a href="text/book-7.xhtml#part-7-1">Zeno</a>
@@ -241,7 +241,7 @@
 							</ol>
 						</li>
 						<li>
-							<a href="text/book-8.xhtml" epub:type="z3998:roman">VIII</a>
+							<a href="text/book-8.xhtml">Book <span epub:type="z3998:roman">VIII</span></a>
 							<ol>
 								<li>
 									<a href="text/book-8.xhtml#part-8-1">Pythagoras</a>
@@ -270,7 +270,7 @@
 							</ol>
 						</li>
 						<li>
-							<a href="text/book-9.xhtml" epub:type="z3998:roman">IX</a>
+							<a href="text/book-9.xhtml">Book <span epub:type="z3998:roman">IX</span></a>
 							<ol>
 								<li>
 									<a href="text/book-9.xhtml#part-9-1">Heraclitus</a>
@@ -311,7 +311,7 @@
 							</ol>
 						</li>
 						<li>
-							<a href="text/book-10.xhtml" epub:type="z3998:roman">X</a>
+							<a href="text/book-10.xhtml">Book <span epub:type="z3998:roman">X</span></a>
 							<ol>
 								<li>
 									<a href="text/book-10.xhtml#part-10-1">Epicurus</a>
