--- a/src/epub/text/book-6.xhtml
+++ b/src/epub/text/book-6.xhtml
@@ -231,16 +231,20 @@
 						<tbody>
 							<tr>
 								<td epub:type="z3998:persona">A.</td>
-								<td epub:type="verse">
-									<span>Tell me, Diogenes, tell me true, I pray,</span>
-									<br/>
-									<span>How did you die; what fate to Pluto bore you?</span>
+								<td epub:type="z3998:verse">
+									<p>
+										<span>Tell me, Diogenes, tell me true, I pray,</span>
+										<br/>
+										<span>How did you die; what fate to Pluto bore you?</span>
+									</p>
 								</td>
 							</tr>
 							<tr>
 								<td epub:type="z3998:persona">B.</td>
-								<td epub:type="verse">
-									<span>The savage bite of an envious dog did kill me.</span>
+								<td epub:type="z3998:verse">
+									<p>
+										<span>The savage bite of an envious dog did kill me.</span>
+									</p>
 								</td>
 							</tr>
 						</tbody>
