Update CSS to new standards

--- a/src/epub/text/book-1.xhtml
+++ b/src/epub/text/book-1.xhtml
@@ -158,7 +158,7 @@
 						<span>You ask about the tripod:</span>
 					</p>
 				</blockquote>
-				<p>and so on, as I have related it before. And now we have said enough on this subject.</p>
+				<p class="continued">and so on, as I have related it before. And now we have said enough on this subject.</p>
 				<p>But Hermippus, in his <i epub:type="se:name.publication.book">Lives</i>, refers to Thales what has been by some people reported of Socrates; for he recites that he used to say that he thanked fortune for three things: first of all, that he had been born a man and not a beast; secondly, that he was a man and not a woman; and thirdly, that he was a Greek and not a barbarian.</p>
 				<p>It is said that once he was led out of his house by an old woman for the purpose of observing the stars, and he fell into a ditch and bewailed himself, on which the old woman said to him⁠—“Do you, O Thales, who cannot see what is under your feet, think that you shall understand what is in heaven?” Timon also knew that he was an astronomer, and in his <i epub:type="se:name.publication.poem">Silloi</i> he praises him, saying:</p>
 				<blockquote epub:type="z3998:verse">
