--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -743,7 +743,7 @@
 							<span>And robes the mountains in their azure hue:</span>
 						</p>
 					</blockquote>
-					<p>to allow one to pass it over without pointing it out. <a href="book-9.xhtml#noteref-135" epub:type="backlink">↩</a></p>
+					<p class="continued">to allow one to pass it over without pointing it out. <a href="book-9.xhtml#noteref-135" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-136" epub:type="endnote">
 					<p>“Diogenes here appears (though he gives no intimation of his doing so) to be transcribing the reasonings of someone of the Skeptics.” <cite>—French Translator</cite> <a href="book-9.xhtml#noteref-136" epub:type="backlink">↩</a></p>
